<package>
  <name>horde_node</name>
  <version>0.1.0</version>
  <description>
    A node wrapper for the neato_horde package, modified from neato_node wrapper
  </description>
  <author>cfong</author>
  <maintainer email="cfong355@gmail.com">cfong</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/neato_node</url>
  
  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>neato_driver</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>tf</run_depend>
</package>
